namespace Metaspesa.Domain.Markets;

public record ProductBrand(string Name);