syntax = "proto3";

package Metaspesa.Protos.Shopping;

option csharp_namespace = "Metaspesa.GrpcApi.Protos.Shopping";

// An item in the shopping list.
message ShoppingItem {
  string name = 1;
  optional string quantity = 2;
  optional string price = 3;
  bool checked = 4;
  int32 product_format_uid = 5;
}

// An item in the shopping list.
message AShoppingItem {
  int32 reference_uid = 1;
  int32 amount = 2;
  bool is_checked = 3;
}

// A list of items for shopping.
message ShoppingList {
  repeated ShoppingItem items = 1;
  optional string name = 2;
}
