// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project metaspesa {
  Note: 'Database schema for Metaspesa shopping application'
  database_type: 'PostgreSQL'
}

// ─────────────────────────────────────────
// IDENTITY SCHEMA
// ─────────────────────────────────────────

Table identity.roles {
  note: 'User roles for access control'

  id guid [pk]
  name varchar(100) [not null, unique]
  description varchar(255) [not null]

  indexes {
    name [name: 'idx_role_name']
  }
}

Table identity.users {
  note: 'Registered users of the shopping application. Each user currently has exactly one role.'

  uid guid [pk]
  username varchar(255) [not null, unique]
  encrypted_password varchar(255) [not null]
  role_id guid [not null]

  indexes {
    username [name: 'idx_user_username']
    role_id [name: 'idx_user_role_id']
  }
}

Ref: identity.users.role_id > identity.roles.id [
  delete: restrict
]

// ─────────────────────────────────────────
// SHOPPING SCHEMA
// ─────────────────────────────────────────

Table shopping.shopping_lists {
  note: '''
  Shopping lists created by users.
  Temporary lists are explicit through is_temporary.
  Saved lists must have a name.
  Temporary lists may have no name and cannot be soft-deleted.
  '''

  id guid [pk, note: 'UUIDv7 generated by application code']
  name varchar
  is_temporary boolean [not null, default: false]
  deleted_at timestamp

  indexes {
    deleted_at [name: 'idx_shopping_list_deleted_at']
  }

  checks {
    `is_temporary = true OR name IS NOT NULL` [name: 'chk_saved_shopping_list_requires_name']
    `is_temporary = false OR deleted_at IS NULL` [name: 'chk_temporary_shopping_list_cannot_be_soft_deleted']
  }
}

Table shopping.shopping_list_ownerships {
  note: 'Associates users with shopping lists, allowing for shared lists'

  user_uid guid [not null]
  shopping_list_id guid [not null]

  indexes {
    user_uid [name: 'idx_shopping_list_ownership_user_uid']
    shopping_list_id [name: 'idx_shopping_list_ownership_shopping_list_id']
    (user_uid, shopping_list_id) [pk, name: 'pk_shopping_list_ownership']
  }
}

Ref: shopping.shopping_list_ownerships.user_uid > identity.users.uid [
  delete: cascade
]

Ref: shopping.shopping_list_ownerships.shopping_list_id > shopping.shopping_lists.id [
  delete: cascade
]

Table shopping.shopping_items {
  note: '''
  Items that belong to a shopping list.
  A shopping item is only a planned product format, not a historical price.
  The exact price is resolved later when creating a purchase.
  '''

  id guid [pk, note: 'UUIDv7 generated by application code']
  shopping_list_id guid [not null]
  product_format_id guid [not null]
  amount integer [not null, default: 1, note: 'How many units/packages of the product are planned']
  is_checked boolean [not null, default: false]
  deleted_at timestamp

  indexes {
    shopping_list_id [name: 'idx_shopping_item_shopping_list_id']
    product_format_id [name: 'idx_shopping_item_product_format_id']
    deleted_at [name: 'idx_shopping_item_deleted_at']
    (shopping_list_id, product_format_id) [name: 'idx_shopping_item_list_product_format']
    /*
      Additional partial unique index:
      CREATE UNIQUE INDEX idx_shopping_item_list_product_format_active
      ON shopping.shopping_items (shopping_list_id, product_format_id)
      WHERE deleted_at IS NULL;
    */
  }

  checks {
    `amount > 0` [name: 'chk_shopping_item_positive_amount']
  }
}

Ref: shopping.shopping_lists.id < shopping.shopping_items.shopping_list_id [
  delete: cascade
]

Ref: shopping.shopping_items.product_format_id > market.product_formats.id [
  delete: restrict
]

// ─────────────────────────────────────────
// PURCHASING SCHEMA
// ─────────────────────────────────────────

Table purchasing.purchases {
  note: '''
  Purchase receipt header.
  Records when a purchase happened, who bought it if the user still exists,
  and optionally which shopping list was checked out.
  '''

  id guid [pk, note: 'UUIDv7 generated by application code']
  user_uid guid
  shopping_list_id guid
  purchased_at timestamp [not null, default: `now()`]

  indexes {
    user_uid [name: 'idx_purchases_user_uid']
    shopping_list_id [name: 'idx_purchases_shopping_list_id']
    purchased_at [name: 'idx_purchases_purchased_at']
  }
}

Ref: purchasing.purchases.user_uid > identity.users.uid [
  delete: set null
]

Ref: purchasing.purchases.shopping_list_id > shopping.shopping_lists.id [
  delete: set null
]

Table purchasing.purchase_items {
  note: '''
  Immutable purchase receipt lines.
  Each line references the exact price snapshot used at purchase time.
  The price snapshot determines the product format and price paid.
  '''

  id guid [pk, note: 'UUIDv7 generated by application code']
  purchase_id guid [not null]
  price_snapshot_id guid [not null]
  amount integer [not null, default: 1, note: 'How many units/packages were bought']

  indexes {
    purchase_id [name: 'idx_purchase_item_purchase_id']
    price_snapshot_id [name: 'idx_purchase_item_price_snapshot_id']
  }

  checks {
    `amount > 0` [name: 'chk_purchase_item_positive_amount']
  }
}

Ref: purchasing.purchase_items.purchase_id > purchasing.purchases.id [
  delete: cascade
]

Ref: purchasing.purchase_items.price_snapshot_id > market.price_snapshots.id [
  delete: restrict
]

// ─────────────────────────────────────────
// MARKET SCHEMA
// ─────────────────────────────────────────

Table market.super_markets {
  note: 'Supermarkets where products are available'

  id guid [pk, note: 'UUIDv7 generated by application code']
  name varchar [not null, unique]
  logo_url varchar

  indexes {
    name [name: 'idx_super_market_name']
  }
}

Table market.product_brands {
  note: 'Brands of products available in the market'

  id guid [pk, note: 'UUIDv7 generated by application code']
  name varchar [not null, unique]

  indexes {
    name [name: 'idx_product_brand_name']
  }
}

Table market.units_of_measure {
  note: '''
  Units used to describe product package format, not shopping count.
  Examples: ml, l, g, kg, piece.
  '''

  id guid [pk, note: 'UUIDv7 generated by application code']
  code varchar(16) [not null, unique, note: 'Stable unit code, e.g. ml, kg, piece']
  name varchar(64) [not null]

  indexes {
    code [name: 'idx_unit_of_measure_code']
  }
}

Table market.products {
  note: 'Products available in the market'

  id guid [pk, note: 'UUIDv7 generated by application code']
  name varchar [not null]
  super_market_id guid [not null]
  brand_id guid [not null]

  indexes {
    super_market_id [name: 'idx_product_super_market_id']
    brand_id [name: 'idx_product_brand_id']
    (name, super_market_id, brand_id) [
      unique,
      name: 'idx_product_name_super_market_brand'
    ]
  }
}

Ref: market.products.super_market_id > market.super_markets.id [
  delete: restrict
]

Ref: market.products.brand_id > market.product_brands.id [
  delete: restrict
]

Table market.product_formats {
  note: '''
  Different package formats for the same product.
  For example, a soda can be sold in 330 ml cans, 500 ml bottles, or 1 l bottles.
  '''

  id guid [pk, note: 'UUIDv7 generated by application code']
  product_id guid [not null]
  quantity decimal(10, 3) [not null]
  unit_of_measure_id guid [not null]
  image_url varchar [not null]

  indexes {
    product_id [name: 'idx_product_format_product_id']
    unit_of_measure_id [name: 'idx_product_format_unit_of_measure_id']
    (product_id, quantity, unit_of_measure_id) [
      unique,
      name: 'idx_product_format_identity'
    ]
  }

  checks {
    `quantity > 0.000` [name: 'chk_product_format_positive_quantity']
  }
}

Ref: market.product_formats.product_id > market.products.id [
  delete: restrict
]

Ref: market.product_formats.unit_of_measure_id > market.units_of_measure.id [
  delete: restrict
]

Table market.price_snapshots {
  note: '''
  Historical price observations for product formats.
  This replaces market.products_history.
  '''

  id guid [pk, note: 'UUIDv7 generated by application code']
  product_format_id guid [not null]
  price_amount decimal(10, 2) [not null]
  currency_code char(3) [not null, default: 'EUR']
  observed_at timestamp [not null, default: `now()`]

  indexes {
    product_format_id [name: 'idx_price_snapshot_product_format_id']
    observed_at [name: 'idx_price_snapshot_observed_at']
    (product_format_id, observed_at) [
      name: 'idx_price_snapshot_format_observed_at'
    ]
  }

  checks {
    `price_amount > 0.00` [name: 'chk_price_snapshot_positive_price']
    `currency_code ~ '^[A-Z]{3}$'` [name: 'chk_price_snapshot_currency_code']
  }
}

Ref: market.price_snapshots.product_format_id > market.product_formats.id [
  delete: restrict
]
